Added support for azure provider

--- a/.gitignore
+++ b/.gitignore
@@ -207,7 +207,7 @@ local.properties
 # PDT-specific
 .buildpath
 
-# sbteclipse plugin 
+# sbteclipse plugin
 .target
 
 # TeXlipse plugin
@@ -301,3 +301,4 @@ nb-configuration.xml
 .cvsignore
 */.cvsignore
 
+.azure/
